Bug 873888 - Wait for construction of tracks before returning onAddStream r=jesup